gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/staticforeach3.d
version https://git-lfs.github.com/spec/v1
oid sha256:e009660c049dd0e35a3d906133cb1636953d6ee71e6f6164138515eb14d1fb93
size 233
